--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
         "lodash": "^4.17.19",
         "postcss": "^8.2.13",
         "postcss-import": "^14.0.1",
+        "sass": "^1.15.2",
+        "sass-loader": "^7.1.0",
         "tailwindcss": "^2.1.2",
+        "tiny-emitter": "^2.1.0",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
     }
