--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
         "eslint-plugin-promise": ">=4.2.1",
         "eslint-plugin-standard": ">=4.0.0",
         "eslint-plugin-vue": "^7.0.1",
+        "husky": "^4.3.0",
         "laravel-mix": "^6.0.6",
+        "lint-staged": "^8.2.1",
         "lodash": "^4.17.19",
         "postcss": "^8.4.4",
         "postcss-import": "^14.0.1",
