--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Prepare environment
         run: |
           cp scripts/ci/.env.${{ matrix.connection }} .env
-          touch config/.version config/.release config/.commit
+          touch config/.release config/.commit
           mkdir -p public/js public/css results/coverage
           {\
             echo "{"; \
@@ -212,7 +212,7 @@ jobs:
       - name: Prepare environment
         run: |
           cp scripts/ci/.env.${{ matrix.connection }} .env
-          touch config/.version config/.release config/.commit
+          touch config/.release config/.commit
           mkdir -p results/coverage results/cov results/console
           chmod -R 777 storage bootstrap/cache
 
