--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -74,6 +74,7 @@ jobs:
       - name: Prepare environment
         run: |
           cp scripts/ci/.env.${{ matrix.connection }} .env
+          echo 'v2.17.0' > config/.version
           touch config/.release config/.commit
           mkdir -p public/js public/css results/coverage
           {\
@@ -212,6 +213,7 @@ jobs:
       - name: Prepare environment
         run: |
           cp scripts/ci/.env.${{ matrix.connection }} .env
+          echo 'v2.17.0' > config/.version
           touch config/.release config/.commit
           mkdir -p results/coverage results/cov results/console
           chmod -R 777 storage bootstrap/cache
