feat: search with meilisearch (monicahq/chandler#30)

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Butler
+APP_NAME=Monica
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=false
-APP_URL=https://butler.test
+APP_URL=https://monica.test
 
 # Database to store information
 DB_CONNECTION=mysql
@@ -12,7 +12,7 @@ DB_DATABASE=butler
 DB_USERNAME=butler
 DB_PASSWORD=butler
 
-# Used for SQLite testing
+# Database for SQLite - used for local development
 DB_TEST_DRIVER=sqlite
 DB_TEST_DATABASE=full_path_to_the_sqlite_database
 DB_TEST_HOST=127.0.0.1
@@ -25,7 +25,7 @@ LOG_CHANNEL=stack
 # Drivers
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -41,6 +41,15 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-
 MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME=butler
+
+# Search
+# We use Laravel Scout to do full-text search.
+# Read config/scout.php for more information.
+# Note that you have to use either Meilisearch or Algolia to enable search in
+# Monica. Searching requires a queue to be configured.
+SCOUT_DRIVER=meilisearch
+SCOUT_QUEUE=true
+MEILISEARCH_HOST=
+MEILISEARCH_KEY=
