--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,14 @@
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "http-interop/http-factory-guzzle": "^1.2",
         "inertiajs/inertia-laravel": "^0.4.3",
         "itsgoingd/clockwork": "^5.1",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.6",
+        "laravel/scout": "^9.4",
         "laravel/tinker": "^2.5",
+        "meilisearch/meilisearch-php": "^0.21.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
