--- a/composer.json
+++ b/composer.json
@@ -110,6 +110,7 @@
         "nunomaduro/larastan": "^2.0",
         "phpunit/phpcov": "^8.0",
         "phpunit/phpunit": "^9.0",
+        "psalm/plugin-laravel": "^2.0",
         "roave/security-advisories": "dev-master",
         "spatie/laravel-ignition": "^1.0",
         "thecodingmachine/phpstan-safe-rule": "^1.0",
