--- a/composer.json
+++ b/composer.json
@@ -40,11 +40,11 @@
         "monicahq/laravel-sabre": "^1.2",
         "ok/ipstack-client": "^1.2",
         "phar-io/version": "^3.1",
-        "pragmarx/countries-laravel": "^0",
         "pragmarx/google2fa": "^8.0",
         "pragmarx/google2fa-laravel": "^1.3",
         "pragmarx/random": "^0",
         "predis/predis": "^1.1",
+        "rinvex/countries": "^8.1",
         "sabre/dav": "^4.0",
         "sentry/sentry-laravel": "^2.0",
         "spatie/macroable": "^1.0",
