feat!: drop php 7.4 support

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ on:
     types: [completed]
 
 env:
-  default-php-version: '7.4'
+  default-php-version: '8.1'
   node-version: 16
 
 
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: [7.4, '8.0']
+        php-version: ['8.0', '8.1']
         connection: [mysql]
         testsuite: [Api, Feature, Unit-Models, Unit-Services]
 
@@ -147,7 +147,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: [7.4, '8.0']
+        php-version: ['8.0', '8.1']
         connection: [mysql]
 
     steps:
