--- a/.github/workflows/migration_tests.yml
+++ b/.github/workflows/migration_tests.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: [8.1]
+        php-version: ['8.1']
         connection: [mysql]
 
     steps:
