--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,9 +32,9 @@ jobs:
         php-version: ['8.0', '8.1']
         connection: [mysql]
         testsuite: [Api, Feature, Unit-Models, Unit-Services]
-        exclude:
-          - php-version: '8.1'
-            testsuite: Feature
+        # exclude:
+        #   - php-version: '8.1'
+        #     testsuite: Feature
 
     steps:
       - name: Checkout sources
@@ -150,7 +150,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: ['8.0', '8.1']
+        php-version: ['8.0']
         connection: [mysql]
 
     steps:
