--- a/.env.example
+++ b/.env.example
@@ -31,9 +31,9 @@ APP_FORCE_URL=false
 # Database information
 # To keep this information secure, we urge you to change the default password
 # Currently only "mysql" compatible servers are working
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=5432
 # You can use mysql unix socket if available, it overrides DB_HOST and DB_PORT values.
 #DB_UNIX_SOCKET=/var/run/mysqld/mysqld.sock
 DB_DATABASE=monica
