--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,7 @@ jobs:
         id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v4
         with:
-          images: ghcr.io/monicahq/monica
+          images: ghcr.io/rust84/monica
           tag-sha: true
 
       - name: Set up Docker Buildx
