--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -12,7 +12,7 @@ env:
   php-version: '8.1'
 
 concurrency: 
-  group: ${{ github.ref }}
+  group: Static analysis ${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
