--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,27 +37,22 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v4
 
-      - name: Setup PHP ${{ matrix.php-version }} without coverage
-        if: matrix.connection != env.coverage-with || matrix.php-version != env.default-php-version || ! matrix.coverage
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php-version }}
-          extensions: mbstring, dom, fileinfo, ${{ matrix.connection }}
-          coverage: none
       - name: Setup PHP ${{ matrix.php-version }}
-        if: matrix.connection == env.coverage-with && matrix.php-version == env.default-php-version && matrix.coverage
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
           extensions: mbstring, dom, fileinfo, ${{ matrix.connection }}
-          coverage: pcov
-          ini-values: pcov.directory=., pcov.exclude="~vendor~"
+          coverage: ${{ (matrix.connection == env.coverage-with && matrix.php-version == env.default-php-version && matrix.coverage) && 'pcov' || 'none' }}
+          ini-values: ${{ (matrix.connection == env.coverage-with && matrix.php-version == env.default-php-version && matrix.coverage) && 'pcov.directory=., pcov.exclude="~vendor~"' || '' }}
+
       - name: Check PHP Version
         run: php -v
       - name: Check Composer Version
         run: composer -V
       - name: Check PHP Extensions
         run: php -m
+      - name: Setup problem matchers for PHP
+        run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
 
       # Composer
       - name: Validate composer.json and composer.lock
@@ -119,16 +114,13 @@ jobs:
         run: php artisan db:seed --no-interaction -vvv
 
       # Test
-      - name: Run tests suite with coverage
-        if: matrix.connection == env.coverage-with && matrix.php-version == env.default-php-version && matrix.coverage
-        run: vendor/bin/phpunit -c phpunit.xml --testsuite ${{ matrix.testsuite }} --log-junit ./results/${{ matrix.connection }}/junit/results${{ matrix.testsuite }}.xml --coverage-clover ./results/${{ matrix.connection }}/coverage/coverage${{ matrix.testsuite }}.xml
-        env:
-          DB_CONNECTION: ${{ matrix.connection }}
+      - name: Setup problem matchers for PHPUnit
+        run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
       - name: Run tests
-        if: matrix.connection != env.coverage-with || matrix.php-version != env.default-php-version || ! matrix.coverage
-        run: vendor/bin/phpunit -c phpunit.xml --testsuite ${{ matrix.testsuite }} --log-junit ./results/${{ matrix.connection }}/junit/results${{ matrix.testsuite }}.xml
+        run: vendor/bin/phpunit -c phpunit.xml --testsuite ${{ matrix.testsuite }} --log-junit ./results/${{ matrix.connection }}/junit/results${{ matrix.testsuite }}.xml $COVERAGE_CLOVER
         env:
           DB_CONNECTION: ${{ matrix.connection }}
+          COVERAGE_CLOVER: ${{ (matrix.connection == env.coverage-with && matrix.php-version == env.default-php-version && matrix.coverage) && '--coverage-clover ./results/${{ matrix.connection }}/coverage/coverage${{ matrix.testsuite }}.xml' || '' }}
 
       - name: Fix results files
         run: sed -i -e "s%$GITHUB_WORKSPACE/%%g" **/*.xml
