--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,10 +11,10 @@ concurrency:
 jobs:
   php:
     name: Lint PHP files
-    uses: monicahq/workflows/.github/workflows/lint_php.yml@init
+    uses: monicahq/workflows/.github/workflows/lint_php.yml@main
 
   vue:
     name: Lint Vue files
-    uses: monicahq/workflows/.github/workflows/lint_vue.yml@init
+    uses: monicahq/workflows/.github/workflows/lint_vue.yml@main
     with:
       node-version: 18
