--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "laravel/fortify": "^1.13",
     "laravel/framework": "^11.0",
     "laravel/jetstream": "^5.0",
-    "laravel/sanctum": "4.0",
+    "laravel/sanctum": "^4.0",
     "laravel/scout": "^10.2",
     "laravel/socialite": "^5.5",
     "laravel/telescope": "^5.0",
