upgrade to laravel11 style

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ APP_KEY=
 APP_DEBUG=true
 
 # The URL of your application.
-APP_URL=localhost:8000
+APP_URL=http://localhost:8000
 
 # Database to store information
 # The documentation is here: https://laravel.com/docs/10.x/database
@@ -59,10 +59,14 @@ LOG_CHANNEL=stack
 #. Queue: sync, database, beanstalkd, sqs, redis
 #  If Queue is not set to 'sync', you'll have to set a queue worker
 #  See https://laravel.com/docs/5.7/queues#running-the-queue-worker
-CACHE_DRIVER=file
+BCRYPT_ROUNDS=12
+CACHE_STORE=file
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
+SESSION_ENCRYPT=false
+SESSION_PATH=/
+SESSION_DOMAIN=null
 
 # Redis, if you need it for the queues
 REDIS_HOST=127.0.0.1
@@ -70,7 +74,7 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 # Mailing
-MAIL_MAILER=smtp
+MAIL_MAILER=log
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
