--- a/.env.example
+++ b/.env.example
@@ -30,18 +30,18 @@ APP_URL=http://localhost:8000
 # The documentation is here: https://laravel.com/docs/10.x/database
 # You can also see the different values you can use in config/database.php
 DB_CONNECTION=sqlite
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=full_path_to_the_sqlite_database
-DB_USERNAME=monica
-DB_PASSWORD=secret
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=monica
+# DB_USERNAME=monica
+# DB_PASSWORD=secret
 
 # Database for SQLite - used for local development
 DB_TEST_DRIVER=sqlite
-DB_TEST_DATABASE=full_path_to_the_sqlite_database
-DB_TEST_HOST=127.0.0.1
-DB_TEST_USERNAME=root
-DB_TEST_PASSWORD=root
+# DB_TEST_DATABASE=monica
+# DB_TEST_HOST=127.0.0.1
+# DB_TEST_USERNAME=root
+# DB_TEST_PASSWORD=root
 
 # Frequency of creation of new log files. Logs are written when an error occurs.
 # Refer to config/logging.php for the possible values.
