--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,7 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=monica
 # DB_PASSWORD=secret
 
-# Database for SQLite - used for local development
+# Database for tests - used for local development
 DB_TEST_DRIVER=sqlite
 # DB_TEST_DATABASE=monica
 # DB_TEST_HOST=127.0.0.1
@@ -59,14 +59,9 @@ LOG_CHANNEL=stack
 #. Queue: sync, database, beanstalkd, sqs, redis
 #  If Queue is not set to 'sync', you'll have to set a queue worker
 #  See https://laravel.com/docs/5.7/queues#running-the-queue-worker
-BCRYPT_ROUNDS=12
 CACHE_STORE=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=database
-SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
 
 # Redis, if you need it for the queues
 REDIS_HOST=127.0.0.1
@@ -80,9 +75,9 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=
+MAIL_FROM_ADDRESS=hello@example.com
 MAIL_FROM_NAME="${APP_NAME}"
-MAIL_REPLY_TO_ADDRESS=
+MAIL_REPLY_TO_ADDRESS=hello@example.com
 MAIL_REPLY_TO_NAME="${APP_NAME}"
 
 # Search
