--- a/.github/workflows/static_analysis.yml
+++ b/.github/workflows/static_analysis.yml
@@ -11,7 +11,7 @@ concurrency:
 jobs:
   statics:
     name: Static analysis
-    uses: monicahq/workflows/.github/workflows/static.yml@statics
+    uses: monicahq/workflows/.github/workflows/static.yml@v2
     with:
       php-version: 8.3
       with: phpstan
