--- a/.env.example
+++ b/.env.example
@@ -59,7 +59,7 @@ LOG_CHANNEL=stack
 #. Queue: sync, database, beanstalkd, sqs, redis
 #  If Queue is not set to 'sync', you'll have to set a queue worker
 #  See https://laravel.com/docs/5.7/queues#running-the-queue-worker
-CACHE_STORE=file
+CACHE_STORE=database
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=database
 
@@ -69,6 +69,7 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 # Mailing
+# Set the MAIL_MAILER to 'smtp' if you want to send emails.
 MAIL_MAILER=log
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
