--- a/composer.json
+++ b/composer.json
@@ -41,11 +41,11 @@
     "socialiteproviders/microsoft-azure": "^5.1",
     "stevebauman/location": "^7.0",
     "thecodingmachine/safe": "^2.5",
-    "tightenco/ziggy": "1.8.1",
+    "tightenco/ziggy": "2.1.0",
     "uploadcare/uploadcare-php": "^4.1"
   },
   "require-dev": {
-    "amirami/localizator": "^0.13.0-alpha",
+    "amirami/localizator": "^0",
     "barryvdh/laravel-debugbar": "^3.7",
     "barryvdh/laravel-ide-helper": "^3.0",
     "brianium/paratest": "^7.0",
