fix: fix webauthn

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "ext-intl": "*",
         "ext-redis": "*",
         "asbiin/laravel-adorable": "^1.0",
-        "asbiin/laravel-webauthn": "^3.0",
+        "asbiin/laravel-webauthn": "^4.0",
         "bacon/bacon-qr-code": "^2.0",
         "creativeorange/gravatar": "^1.0",
         "doctrine/dbal": "^3.0",
@@ -31,7 +31,7 @@
         "laravel/socialite": "^5.0",
         "laravel/ui": "^4.0",
         "laravolt/avatar": "^4.0",
-        "lcobucci/clock": "3.0.0",
+        "lcobucci/clock": "^3.0.0",
         "league/flysystem-aws-s3-v3": "^3.0",
         "mariuzzo/laravel-js-localization": "^1.7",
         "matriphe/iso-639": "^1.0",
