--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,9 @@ name: Unit tests
 
 on:
   push:
-    branches: [main]
+    branches: 
+      - main
+      - 4.x
   pull_request:
     types: [opened, synchronize, reopened]
     branches-ignore: ['l10n_main*']
