--- a/.env.example
+++ b/.env.example
@@ -84,12 +84,14 @@ MAIL_REPLY_TO_NAME="${APP_NAME}"
 # Search
 # We use Laravel Scout to do full-text search.
 # Read config/scout.php for more information.
-# Note that you have to use Meilisearch, Algolia or the database driver to enable
+# Note that you have to use Meilisearch, Typesense, Algolia or the database driver to enable
 # search in Monica. Searching requires a queue to be configured.
 SCOUT_DRIVER=database
 SCOUT_QUEUE=true
 MEILISEARCH_HOST=
 MEILISEARCH_KEY=
+TYPESENSE_API_KEY=
+TYPESENSE_HOST=
 
 # Notification channels
 TELEGRAM_BOT_TOKEN=
