--- a/.env.example
+++ b/.env.example
@@ -82,12 +82,14 @@ MAIL_REPLY_TO_ADDRESS=hello@example.com
 MAIL_REPLY_TO_NAME="${APP_NAME}"
 
 # Search
-# We use Laravel Scout to do full-text search.
-# Read config/scout.php for more information.
-# Note that you have to use Meilisearch, Typesense, Algolia or the database driver to enable
-# search in Monica. Searching requires a queue to be configured.
+## We use Laravel Scout to do full-text search.
+## Read config/scout.php for more information.
+## Note that you have to use: 'meilisearch', 'typesense', 'algolia' or the 'database' driver
+## to enable search in Monica. Searching requires a queue to be configured.
 SCOUT_DRIVER=database
 SCOUT_QUEUE=true
+## If you never intend to use the 'database' driver, you can set this value to false:
+SCOUT_FULL_TEXT_INDEX=true
 MEILISEARCH_HOST=
 MEILISEARCH_KEY=
 TYPESENSE_API_KEY=
