--- a/.env.example
+++ b/.env.example
@@ -89,7 +89,7 @@ MAIL_REPLY_TO_NAME="${APP_NAME}"
 SCOUT_DRIVER=database
 SCOUT_QUEUE=true
 ## If you never intend to use the 'database' driver, you can set this value to false:
-SCOUT_FULL_TEXT_INDEX=true
+FULL_TEXT_INDEX=true
 MEILISEARCH_HOST=
 MEILISEARCH_KEY=
 TYPESENSE_API_KEY=
