--- a/scripts/docker/Dockerfile
+++ b/scripts/docker/Dockerfile
@@ -145,7 +145,7 @@ RUN set -ex; \
     a2enconf remoteip
 
 # set apache config LimitRequestBody
-ENV APACHE_BODY_LIMIT 1073741824
+ENV APACHE_BODY_LIMIT=1073741824
 RUN set -ex; \
     \
     { \
