--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   "require": {
     "php": "^8.2",
     "ext-fileinfo": "*",
+    "ext-intl": "*",
     "asbiin/laravel-sentry-tunnel": "^2.0",
     "asbiin/laravel-webauthn": "^4.4",
     "codezero/laravel-localizer": "^3.0",
